# Auto-GPT-Website-Carbon-Footprint

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/websitecarbonfootprint/: __init__.py  test_websitecarbonfootprint_plugin.py  websitecarbonfootprint_plugin.py
