[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto_gpt_sustainability_plugin"
version = "0.0.1"
authors = [
  { name="arananet", email="arananet@users.noreply.github.com" },
]
description = "The Auto-GPT Website Carbon Plugin"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["abstract-singleton"]

[project.urls]
"Homepage" = "https://github.com/arananet/Auto-GPT-Website-Carbon-Footprint"
"Bug Tracker" = "https://github.com/arananet/Auto-GPT-Website-Carbon-Footprint/issues"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = ""

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"